--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,9 +14,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run Semgrep
+      - name: Install and Run Semgrep
+        # Use bash to avoid the newline unexpected error
         run: |
-          curl -sL https://semgrep.dev/install.sh | sh
+          curl -sL https://get.semgrep.dev/install.sh | bash
           ./semgrep --config=p ./...
 
       - name: Run Hadolint
