--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,13 +18,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           pip install semgrep
-          semgrep --config=p ./...
-
-      # Alternative : Exécuter Semgrep avec Docker
-      - name: Run Semgrep with Docker (Alternative)
-        if: failure()
-        run: |
-          docker run --rm -v "$(pwd):/src" returntocorp/semgrep semgrep --config=p /src
+          semgrep --config=auto ./...
 
       - name: Run Hadolint
         run: |
