--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           pip install semgrep
-          semgrep --config=auto ./...
+          semgrep --config=auto .
 
       - name: Run Hadolint
         run: |
