--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,7 +20,7 @@ jobs:
         run: semgrep --config=auto .
 
       - name: Run Hadolint (using action)
-        uses: hadolint/hadolint-action@v2
+        uses: hadolint/hadolint-action@latest
         with:
           dockerfile: Dockerfile
 
